Display map with markers

--- a/public/index.html
+++ b/public/index.html
@@ -10,16 +10,10 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <title>Prowl Finder</title>
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-TV_A50Nincyj2KJyMILFVx1QafcunhA"></script>
   </head>
   <body>
     <noscript>
